Enhance the log feature
